Fix the gap between each active paragraph.

--- a/2018/assets/css/main.css
+++ b/2018/assets/css/main.css
@@ -169,9 +169,12 @@ table {
         content: '#';
         color: #D32F80;
         margin-right: 1rem; }
+    .spotlight .container h1 + h2 {
+      margin: 0;
+      margin-bottom: 1rem; }
     .spotlight .container h2 {
       font-size: 22pt;
-      margin-bottom: 1rem;
+      margin: 1.5rem 0 10pt 0;
       font-weight: 400; }
       @media screen and (max-width: 1200px) {
         .spotlight .container h2 {
