--- a/2018/assets/scss/_spotlight.scss
+++ b/2018/assets/scss/_spotlight.scss
@@ -40,12 +40,16 @@
         margin-right: 1rem;
       }
     }
+    h1+h2 {
+      margin: 0;
+      margin-bottom: 1rem;
+    }
     h2 {
       @media screen and (max-width: 1200px) {
         font-size: 18pt;
       }
       font-size: 22pt;
-      margin-bottom: 1rem;
+      margin: 1.5rem 0 10pt 0;
       font-weight: 400;
     }
     >p {
